@@ -19,6 +19,7 @@ TODO: xim "how to" faq entry
         - +option now really sets the option to default, instead of using the
           resource value.
         - options that require an argument now really _require_ an argument.
+        - force refresh of XA_RESOURCE_STRING on virtual reconnect.
         - return exit status 2 in urxvtc when urxvtd couldn't be contacted.
         - the linux yield hack is back, now using usleep, and enabled only on
           __linux__.
